--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ pytz==2019.3
 requests==2.23.0
 requests-oauthlib==1.3.0
 rsa==4.0
+schedule==0.6.0
 six==1.14.0
 soupsieve==2.0
 uritemplate==3.0.1
